# fluffyduck

./: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: backend-test.yml  docker-gcr.yml  frontend-test.yml  test.yml
backend/: .env  agents.py  environment.yml  requirements.txt
backend/conversational-ai-gemini-twilio/: .env.example  README.md  pyproject.toml  run.py
backend/conversational-ai-gemini-twilio/src/fluffyduck_gemini_twilio/: __init__.py  app.py  config.py
backend/conversational-ai-twilio/: .env
backend/restaurant_image_enhancer/: .env  main.py
backend/src/api/: main.py
backend/src/database/: supabase.py
backend/src/models/: schemas.py
backend/src/services/: fal_service.py  storage_service.py
backend/tests/: test_campaigns.py  test_elevenlabs.py  test_fal.py  test_fal_image.py  test_generate_campaign.py  test_image_upload.py  test_supabase.py
infrastructure/terraform/gcp_free_instance/: main.tf  variables.tf
server/: .env  index.js  package.json
src/: App.tsx
src/components/: ImageUpload.tsx
src/components/auth/: ProtectedRoute.tsx
src/components/campaign/: CampaignCards.tsx  CampaignCreationForm.tsx  CampaignDetailsDialog.tsx  CampaignDetailsForm.tsx  CampaignForm.tsx  (+4 more)
src/context/: AuthContext.tsx
src/hooks/: useCampaignCreation.ts
src/pages/: Auth.tsx  CampaignCompletion.tsx  Create.tsx  CreateCampaign.tsx  Dashboard.tsx  Index.tsx  MediaLibrary.tsx  Reservations.tsx
src/services/: api 2.ts  api.ts
src/types/: campaign.ts
supabase/: config.toml
(+18 files in other folders)
